# regex-engine

./: Cargo.toml  Makefile  README.md
automaton/: Cargo.toml
automaton/src/: deterministic_finite_automaton.rs  lib.rs  nondeterministic_finite_automaton.rs
parser/: Cargo.toml
parser/src/: lib.rs
src/: main.rs
virtual_machine/: Cargo.toml
virtual_machine/src/: compiler.rs  lib.rs  virtual_machine.rs
